GRBK-754 : Reviewd and made various changes as suggested by FindBugs.